UPDATE: added values and tags to project page and all projects page

--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -8,5 +8,11 @@
 <p>Title : {{project.title}}</p>
 <br>
 <p>Description : {{project.description}}</p>
+<br>
+
+{% for tag in tags %}
+<p>{{tag}}</p>
+
+{% endfor %}
 
 {% endblock content %}
