--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -11,7 +11,7 @@
 <br>
 
 {% for tag in tags %}
-<p>{{tag}}</p>
+<span style="border: solid 3px black; padding: 2px;">{{tag}}</span>
 
 {% endfor %}
 
