--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -14,9 +14,22 @@
                     </span>
                     {% endfor %}
                 </div>
+
+                {% if project.source_link %}
+
                 <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source
                     Code
                 </a>
+
+                {% endif %}
+
+                {% if project.demo_link %}
+
+                <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Demo Program
+                </a>
+
+                {% endif %}
+
                 <a href="{% url 'update-project' project.id %}" class="singleProject__liveLink"><i
                         class="im im-external-link"></i> Edit</a>
                 <a href="{% url 'delete-project' project.id %}" class="singleProject__liveLink"><i
@@ -24,7 +37,7 @@
             </div>
             <div class="column column--2of3">
                 <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
-                <a href="profile.html" class="singleProject__developer">Md. Shahriar Parvez</a>
+                <a href="{% url 'userProfile' project.owner.id %}" class="singleProject__developer">{{project.owner.name}}</a>
                 <h2 class="singleProject__title">{{project.title}}</h2>
                 <h3 class="singleProject__subtitle">About the Project</h3>
                 <div class="singleProject__info">
