--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -2,14 +2,30 @@
 
 {% block content %}
 
+{% if page == "register" %}
+    <h1>Register User</h1>
+    <form method="POST" action="{% url 'register' %}">
+        {% csrf_token %}
+        {{form.as_table}}
+
+        <input type="submit" value="Register username" >
+
+    </form>
+
+
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+
+{% else %}
 <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
     <input type="text" name="username" placeholder="enter username">
     <input type="password" name="password" placeholder="enter password">
     <input type="submit" value="login">
 
-</form>
+    <p>Don't have an account? <a href="{% url 'register' %}">Sign up</a></p>
 
+</form>
+{% endif %}
 
 
 
