UPDATE: editing user account page

--- a/devsearch/templates/main.html
+++ b/devsearch/templates/main.html
@@ -37,7 +37,7 @@
  
 </body>
 <script src="{% static 'uikit/app.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>hi swaid,hi
  
 </html>
 </html>
