--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -62,7 +62,7 @@
         </div>
 
         <table class="settings__table">
-          {% for skill in skills %}
+          {% for skill in profile.skill_set.all %}
           <tr>
             <td class="settings__tableInfo">
               <h4>{{skill.name}}</h4>
@@ -71,9 +71,10 @@
               </p>
             </td>
             <td class="settings__tableActions">
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' skill.id %}"><i
+              <!-- url 'update-skill' skill.id  url 'delete-skill' skill.id ?next=/account-->
+              <a class="tag tag--pill tag--main settings__btn" href=""><i 
                   class="im im-edit"></i> Edit</a>
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}?next=/account"><i
+              <a class="tag tag--pill tag--main settings__btn" href=""><i
                   class="im im-x-mark-circle-o"></i>
                 Delete</a>
             </td>
@@ -88,7 +89,7 @@
         </div>
 
         <table class="settings__table">
-          {% for project in projects %}
+          {% for project in profile.project_set.all %}
           <tr>
             <td class="settings__thumbnail">
               <a href="{% url 'project' project.id %}"><img src="{{project.imageURL}}" alt="Project Thumbnail" /></a>
