--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -59,7 +59,7 @@
         </div>
         <div class="settings">
           <h3 class="settings__title">Skills</h3>
-          <a class="tag tag--pill tag--sub settings__btn tag--lg" href=""><i class="im im-plus"></i> Add Skill</a>
+          <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create-skill' %}"><i class="im im-plus"></i> Add Skill</a>
         </div>
         <table class="settings__table">
           {% for skill in profile.skill_set.all %}
@@ -91,7 +91,7 @@
           {% for project in profile.project_set.all %}
           <tr>
             <td class="settings__thumbnail">
-              <a href="{% url 'project' project.id %}"><img src="{{project.imageURL}}" alt="Project Thumbnail" /></a>
+              <a href="{% url 'project' project.id %}"><img src="{{ project.featured_image.url }}" alt="Project Thumbnail" /></a>
             </td>
             <td class="settings__tableInfo">
               <a href="{% url 'project' project.id %}">{{project.title}}</a>
