--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -9,7 +9,7 @@
       <div class="column column--1of3">
         <div class="card text-center">
           <div class="card__body dev">
-            <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit-account' %}"><i class="im im-edit"></i>
+            <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit-account' %}?next=/account"><i class="im im-edit"></i>
               Edit</a>
             <img class="avatar avatar--xl dev__avatar" src="{{profile.profile_image.url}}" />
             <h2 class="dev__name">{{profile.name}}</h2>
@@ -59,7 +59,7 @@
         </div>
         <div class="settings">
           <h3 class="settings__title">Skills</h3>
-          <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create-skill' %}"><i class="im im-plus"></i> Add Skill</a>
+          <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create-skill' %}?next=/account"><i class="im im-plus"></i> Add Skill</a>
         </div>
         <table class="settings__table">
           {% for skill in profile.skill_set.all %}
@@ -71,9 +71,9 @@
               </p>
             </td>
             <td class="settings__tableActions">
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' skill.id %}"><i
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' skill.id %}?next=/account"><i
                   class="im im-edit"></i> Edit</a>
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}"><i
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}?next=/account"><i
                   class="im im-x-mark-circle-o"></i>
                 Delete</a>
             </td>
@@ -83,7 +83,7 @@
 
         <div class="settings">
           <h3 class="settings__title">Projects</h3>
-          <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create-project' %}"><i
+          <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create-project' %}?next=/account"><i
               class="im im-plus"></i> Add Project</a>
         </div>
 
@@ -98,7 +98,7 @@
               <p>{{project.description|slice:"150"}}</p>
             </td>
             <td class="settings__tableActions">
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-project' project.id %}"><i
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-project' project.id %}?next=/account"><i
                   class="im im-edit"></i> Edit</a>
               <a class="tag tag--pill tag--main settings__btn"
                 href="{% url 'delete-project'  project.id %}?next=/account"><i class="im im-x-mark-circle-o"></i>
