--- a/devsearch/users/templates/users/profiles.html
+++ b/devsearch/users/templates/users/profiles.html
@@ -32,7 +32,7 @@
 
                 <div class="column card">
                     <div class="dev">
-                        <a href="{% url 'userProfile' profile.id %}" class="card__body">
+                        <a href="{% url 'userProfile' profile.id %}?next=/account" class="card__body">
                             <div class="dev__profile">
                                 <img class="avatar avatar--md" src="{{profile.profile_image.url}}"
                                     alt="image" />
