--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -14,8 +14,8 @@
                 <form class="form" action="{% url 'projects' %}" method="get">
                     <div class="form__field">
                         <label for="formInput#search">Search By Projects </label>
-                        <input class="input input--text" id="formInput#search" type="text" name="search_text" 
-                            placeholder="Search by Project Title" value="{{search_text}}"/>
+                        <input class="input input--text" id="formInput#search" type="text" name="search_text"
+                            placeholder="Search by Project Title" value="{{search_text}}" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -37,7 +37,8 @@
                                 alt="project thumbnail" />
                             <div class="card__body">
                                 <h3 class="project__title">{{ project.title }}</h3>
-                                <p><a class="project__author" href="{% url 'userProfile' project.owner.id %}">By {{project.owner.name}}</a></p>
+                                <p><a class="project__author" href="{% url 'userProfile' project.owner.id %}">By
+                                        {{project.owner.name}}</a></p>
                                 <p class="project--rating">
                                     <span style="font-weight: bold;">{{ project.vote_ratio}}% </span> Postitive
                                     Feedback ({{project.vote_total}} Vote{{project.vote_total|pluralize:"s"}})
@@ -57,6 +58,35 @@
             </div>
         </div>
     </section>
+
+    {% if projects.has_other_pages %}
+
+    <div class="pagination">
+        <ul class="container">
+
+            {% if projects.has_previous %}
+            <li><a href="?page={{page.previous_page_number}}" class="btn page-link btn--sub">&#10094 Prev</a></li>
+
+            {% endif %}
+            {%for page in custom_range %}
+
+            {% if page == projects.number %}
+            <li><a href="?page={{page}}" class="btn page-link btn--sub">{{ page }}</a></li>
+            {% else %}
+            <li><a href="?page={{page}}" class="btn page-link">{{ page }}</a></li>
+
+            {% endif %}
+
+            {% endfor %}
+
+            {% if projects.has_next %}
+            <li><a href="?page={{projects.next_page_number}}" class="btn page-link btn--sub"> Next &#10095;</a></li>
+
+            {% endif %}
+            {% endif %}
+
+        </ul>
+    </div>
 </main>
 
 {% endblock content %}
