--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -30,9 +30,9 @@
 
                 {% endif %}
 
-                <a href="{% url 'update-project' project.id %}" class="singleProject__liveLink"><i
+                <a href="{% url 'update-project' project.id %}?next=/projects" class="singleProject__liveLink"><i
                         class="im im-external-link"></i> Edit</a>
-                <a href="{% url 'delete-project' project.id %}" class="singleProject__liveLink"><i
+                <a href="{% url 'delete-project' project.id %}?next=/projects" class="singleProject__liveLink"><i
                         class="im im-external-link"></i> Delete</a>
             </div>
             <div class="column column--2of3">
