--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -59,34 +59,7 @@
         </div>
     </section>
 
-    {% if projects.has_other_pages %}
-
-    <div class="pagination">
-        <ul class="container">
-
-            {% if projects.has_previous %}
-            <li><a href="?page={{page.previous_page_number}}" class="btn page-link btn--sub">&#10094 Prev</a></li>
-
-            {% endif %}
-            {%for page in custom_range %}
-
-            {% if page == projects.number %}
-            <li><a href="?page={{page}}" class="btn page-link btn--sub">{{ page }}</a></li>
-            {% else %}
-            <li><a href="?page={{page}}" class="btn page-link">{{ page }}</a></li>
-
-            {% endif %}
-
-            {% endfor %}
-
-            {% if projects.has_next %}
-            <li><a href="?page={{projects.next_page_number}}" class="btn page-link btn--sub"> Next &#10095;</a></li>
-
-            {% endif %}
-            {% endif %}
-
-        </ul>
-    </div>
+    {% include 'pagination.html' with queryset=projects custom_range=custom_range%}
 </main>
 
 {% endblock content %}
