--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -53,6 +53,11 @@
                         Vote{{project.vote_total|pluralize:"s"}})
                     </h5>
 
+                    {% if request.user.profile.id in project.reviewers%}
+                    <p>You have submitted a review of htis project.</p>
+                    {% elif  request.user.profile == project.owner  %}
+                    <p>You cannot review your own work</p>
+                    {% elif request.user.is_authenticated %}
                     <form class="form" action="{% url 'project' project.id %}" method="POST">
                         {% csrf_token %}
                         {% for field in form %}
@@ -64,8 +69,11 @@
                         {% endfor %}
                         <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
                     </form>
+                    {% else %}
+                    <a href="{% url 'login'%}?next={{request.path}}">Please login</a>
+                    {% endif %}
                     <div class="commentList">
-                        <h1>hello!</h1>
+
                         {% for review in project.review_set.all %}
                         {% if review.review %}
                         <div class="comment">
