--- a/devsearch/projects/templates/projects/project_form.html
+++ b/devsearch/projects/templates/projects/project_form.html
@@ -18,6 +18,11 @@
                     </div>
                     {% endfor %}
 
+                    <div class="form__field">
+                        <label for="formInput#text">Tags [seperated only by a comma ( , ) ]</label>
+                        <textarea class="input" name="newtags" placeholder="add tags here . . ."></textarea>
+                    </div>
+
                     <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
                 </form>
             </div>
