--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -36,7 +36,7 @@
                         class="im im-external-link"></i> Delete</a>
             </div>
             <div class="column column--2of3">
-                <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
+                <img class="singleProject__preview" src="{{ project.imageURL }}" alt="portfolio thumbnail" />
                 <a href="{% url 'userProfile' project.owner.id %}"
                     class="singleProject__developer">{{project.owner.name}}</a>
                 <h2 class="singleProject__title">{{project.title}}</h2>
@@ -77,7 +77,7 @@
                         {% if review.review %}
                         <div class="comment">
                             <a href="{% url 'userProfile' review.owner.id %}">
-                                <img class="avatar avatar--md" src="{{review.owner.profile_image.url}}" alt="user" />
+                                <img class="avatar avatar--md" src="{{review.owner.imageURL}}" alt="user" />
                             </a>
 
                             <div class="comment__details">
