UPDATE: moved tables to postgres/AWS RDS database. Moved image storage to AWS S3 bucket storage using django storage and boto3

--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -16,7 +16,7 @@
 
                 {% if project.source_link %}
 
-                <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source
+                <a class="singleProject__liveLink" href="{{project.source_link}}" target="_blank"><i class="im im-external-link"></i>Source
                     Code
                 </a>
 
@@ -24,7 +24,7 @@
 
                 {% if project.demo_link %}
 
-                <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Demo
+                <a class="singleProject__liveLink" href="{{project.demo_link}}" target="_blank"><i class="im im-external-link"></i>Demo
                     Program
                 </a>
 
